# vcd-api-service

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: exceptions.py  main.py  repositories.py  service.py  tasks.py  utils.py
app/api/: api.py
app/api/v1/: api.py
app/api/v1/routers/: console.py  vcd.py
app/api/v1/schemas/: vcd.py
app/core/: celery.py  middleware.py
app/core/settings/: config.py  config.toml  constants.py
app/db/: __init__.py
app/db/migrations/: env.py
app/db/migrations/versions/: 165ac0c542f0_init.py
app/db/models/: settings.py  template.py  vm.py
app/providers/: dependencies.py  stubs.py
app/templates/: vm-console.html
docker/: nginx.conf
